--- a/scss/main.scss
+++ b/scss/main.scss
@@ -20,6 +20,6 @@
 @import "theme/predefined";
 @import "theme/elements";
 @import "theme/header";
-@import "theme/home";
+@import "theme/homi";
 @import "theme/pages";
 @import "theme/footer";
