--- a/css/main.css
+++ b/css/main.css
@@ -3401,3 +3401,55 @@ body.mobile-nav-active #mobile-nav-toggle {
 html {
 	scroll-behavior: smooth;
 }
+
+/*new addition */
+
+
+.single-work {
+    border-radius: 5px;
+    margin-bottom: 30px;
+    .thumb {
+        .overlay-bg {
+            background: $primary-color;
+            opacity: 0;
+            border-radius: 5px;
+            @include transition();
+        }
+        .image {
+            opacity: 1;
+            display: block;
+            width: 100%;
+            height: 100%;
+            transition: .5s ease;
+            backface-visibility: hidden;
+        }
+    }
+    .middle {
+        transition: .5s ease;
+        opacity: 0;
+        position: absolute;
+        top: 50%;
+        left: 20%;
+        @include transform(translate(-10%, -50%));
+        text-align: center;
+        @include transition();
+        h4 {
+            font-size: 21px;
+            color: $white;
+        }
+        .cat {
+            font-size: 15px;
+            color: $white;
+        }
+    }
+    &:hover {
+        .thumb {
+            .overlay-bg {
+                opacity: .80;
+            }
+        }
+        .middle {
+            opacity: 1;
+        }
+    }
+}
